# testtask

./: CMakeLists.txt  Connector.h  Dockerfile  README.md  build.sh  clientconnection.h  config.cfg  config.cpp  config.h  connectionmanager.cpp  connectionmanager.h  connectionprocessor.cpp  connectionprocessor.h  controlchannel.cpp  controlchannel.h  controller.cpp  controller.h  controlmessage.h  forwarder.cpp  forwarder.h  jsonparser.cpp  jsonparser.h  main.cpp  proxy.cpp  proxy.h  proxymanager.cpp  proxymanager.h  server.cpp  server.h
docker/: Dockerfile.proxy  Dockerfile.tests
include/amqpcpp/: libev.h  libevent.h
scripts/: start.sh
tests/: client.py  server.py  test.py
